<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/give_values"
        android:id="@+id/textView" />

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:columnCount="8"
        android:rowCount="1"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/x"
            android:id="@+id/textViewX"
            android:textSize="50sp"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editTextX"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y"
            android:id="@+id/textViewY"
            android:textSize="50dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/editTextX"
            android:layout_row="0"
            android:layout_column="3" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editTextY"
            android:layout_alignTop="@+id/editTextX"
            android:layout_toRightOf="@+id/textViewY"
            android:layout_row="0"
            android:layout_column="5" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="34dp"
            android:layout_row="0"
            android:layout_column="7" />

    </GridLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">
    android:id="@+id/scrollView" >

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearButton"
        android:id="@+id/buttonClear"
        android:layout_gravity="bottom|right"
        android:layout_marginTop="20dp"
        android:layout_weight="1" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_polynomial"
        android:id="@+id/btnGetPoly"
        android:layout_gravity="bottom"
        android:longClickable="false" />

</LinearLayout>